--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6601,3 +6601,10 @@ td.ui-datepicker-current-day {}
 	flex-direction: row-reverse;
 	flex-wrap: wrap;
 }
+.fit-screen {
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
