--- a/templates/service_detail.html
+++ b/templates/service_detail.html
@@ -1,98 +1,92 @@
-
 {% extends 'base2.html' %}
 {% load static %}
 {% block body %}
-<body class="portfolio-single-item pc">
+<body class="blog-page pc">
 	{% include 'snippet/header.html' %}
 	<div class="top-bg">
 		
     	<img src="{% static 'img/splash-top.png' %}" class="splash-top" alt>
-		<div class="page-title zoomIn animated">single post</div>
+		<div class="page-title zoomIn animated">Blog</div>
 	</div>
-	<section class="pf-content-single">
-		<div class="grid-row clear">
-			<div class="title">
-				<span class="main-title">{{data.h1}}</span>
-				<span class="slash-icon">/<i class="fa fa-angle-double-right"></i></span>
-			</div>
-		</div>
-		<div class="grid-row">
-			<p>{{data.description}}</p>
-			<div class="pf-single-carousel">
-				<div id="pf-single-carousel" class="owl-carousel">
 
-
-					<div><img src="{{data.image.url}}" alt=""></div>
-
-
-
-					{% comment %} <div><img src="{% static 'images/portfolio-single/pf-slide-2.jpg' %}" alt=""></div>
-					<div><img src="{% static 'images/portfolio-single/pf-slide-3.jpg' %}" alt=""></div>
-				</div>
-				<div class="sl-controll">
-					<div class="prev"><i class="fa fa-angle-double-left"></i></div>
-					<div class="next"><i class="fa fa-angle-double-right"></i></div>
-				</div> {% endcomment %}
-			</div>
-			<div class="grid-col-row clear">
-				<div class="grid-col grid-col-9">
-					<p><b>{{data.content|safe}}</p>
-				</div>
-				<div class="grid-col grid-col-3">
-					{% comment %} <div class="project-details">
-						<div class="circle"><i class="fa fa-folder-open"></i></div>
-						<div class="detail-title">project details</div>
-						<div class="kind-details">Date of Creation:<p>05/05/2016</p></div>
-						<div class="kind-details">Categories:<p>Sed / Quis / Metus</p></div>
-						<div class="kind-details">Author:<p>Alexandr Doe</p></div>
-						<div class="kind-details">WebSite:<p>www.your_web.com</p></div>
-						<div class="social">
-							<a href="#"><div class="contact-round"><i class="fa fa-twitter"></i></div></a>
-							<a href="#"><div class="contact-round"><i class="fa fa-facebook"></i></div></a>
-							<a href="#"><div class="contact-round"><i class="fa fa-skype"></i></div></a>
-							<a href="#"><div class="contact-round"><i class="fa fa-rss"></i></div></a>
-							<a href="#"><div class="contact-round"><i class="fa fa-linkedin"></i></div></a>
-						</div>
-					</div> {% endcomment %}
-				</div>
-			</div>
-			<div class="related-projects">
-				<div class="title">
-					<span class="main-title">OTHER SERVICES</span>
-					<span class="slash-icon">/<i class="fa fa-angle-double-right"></i></span>
-				</div>
-				<div class="grid-col-row">
-					<div id="project-carousel" class="owl-carousel">
-                        {% for service in services %}
-						<div class="grid-col grid-col-3">
-							<div class="little-about">
-								<div class="picture">
-									<div class="hover-effect"></div>
-									<div class="link-cont">
-										<a href="#" class="cws-slide-left fa fa-share-alt" onclick="shareContent(event)"></a>
-										<a href="#" class="cws-slide-right fa fa-heart heart-icon" data-blog-id="{{ blog.id }}" onclick="toggleHeart(event)"></a>
+			<!-- page content -->
+			<div class="page-content">
+				<div class="grid-row clear">
+					<div class="grid-col-row">
+						<div class="grid-col grid-col-9">
+							<div id="content" role="main">
+								<div class="clear">
+									<div class="title">
+										<span class="main-title">{{data.title}}</span>
 									</div>
-									<img src="{{service.image.url}}" alt="">
-								</div>
-								<h3>{{service.h1}}</h3>
-								<p>{{service.description}}</p>
-								<a class="button" href="{% url "home:service_detail" service.slug %}">/ MORE DETAILS</a>
-							</div>
-						</div>
-                        {% endfor %}
+									<div class="post-info clear">
+										{% comment %} <span><i class="fa fa-calendar"></i> {{service.published}}</span>
+										<span><i class="fa fa-edit"></i> {{blog.author}}</span> {% endcomment %}
+										<div></div>
+									</div>
+									<div class="pf-single-carousel">
+										<div id="pf-single-carousel" class="owl-carousel">
+											<div><img style="margin-top: 30px;" src="{{data.image.url}}" alt=""></div>
 
+										</div>
+									</div>
+									<dl>
+										<dt><strong>{{data.title}}</strong></dt>
+											<dd>{{data.content|safe}}</dd>
+									</dl>
+									<div class="follow-subscribe-icon clear">
+									</div>
+								</div>
+								<hr />
+							</div>
+							
+						</div>
+						
+					</div>
+					<!-- sidebar -->
+					{% include 'snippet/aside_service.html' %}
+					<!-- sidebar -->
+					
+				</div>
+				<div class="related-projects fit-screen">
+					<div class="title  "style="margin-bottom: 30px; margin-top:30px;text-align: center;">
+						<span class="main-title">OTHER SERVICES</span>
+						<span class="slash-icon">/<i class="fa fa-angle-double-right"></i></span>
+					</div>
+					<div class="grid-col-row">
+						<div id="project-carousel" class="owl-carousel">
+							{% for service in services %}
+							<div class="grid-col grid-col-3">
+								<div class="little-about">
+									<div class="picture">
+										<div class="hover-effect"></div>
+										<div class="link-cont">
+											<a href="#" class="cws-slide-left fa fa-share-alt" onclick="shareContent(event)"></a>
+											<a href="#" class="cws-slide-right fa fa-heart heart-icon" data-blog-id="{{ blog.id }}" onclick="toggleHeart(event)"></a>
+										</div>
+										<img src="{{service.image.url}}" alt="">
+									</div>
+									<h3>{{service.h1}}</h3>
+									<p>{{service.description}}</p>
+									<a class="button" href="{% url 'home:service_detail' service.slug %}">/ MORE DETAILS</a>
+								</div>
+							</div>
+							{% endfor %}
+						</div>
+					</div>
+					<div class="carousel-nav">
+						<div class="carousel-button">
+							<div class="prev"><i class="fa fa-chevron-left"></i></div>
+							<div class="next"><i class="fa fa-chevron-right"></i></div>
+						</div>
+						<div class="carousel-line"></div>
 					</div>
 				</div>
-				<div class="carousel-nav">
-					<div class="carousel-button">
-						<div class="prev"><i class="fa fa-chevron-left"></i></div>
-						<div class="next"><i class="fa fa-chevron-right"></i></div>
-					</div>
-					<div class="carousel-line"></div>
-				</div>
+				
+				
 			</div>
-		</div>	
-	</section>
-	{% include 'snippet/cta.html' %}
-	{% include 'snippet/footer2.html' %}
-    {% endblock body %}
+			<!--/ page content -->
+			{% include 'snippet/sub.html' %}
+
+{% include 'snippet/footer2.html' %}
+	{% endblock body %}
