some changes not major minor frontend changes

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -227,7 +227,7 @@
 
 	<!--/ page content  -->
 	<!-- subscribe -->
-	{% include 'snippet/sub.html' %}
+	{% include 'snippet/cta.html' %}
 	{% include 'snippet/footer2.html' %}
 	<!--/ subscribe  -->
 	{% endblock body %}
