--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
       <div class="tp-banner">
         <ul>
           <li>
-            <img src="{% static 'c1.jpg' %}" style="height: 500px;" alt />
+            <img src="{% static 'c1.jpg' %}" style="height: 500px;" alt='ghhgf' />
             <div class="tp-caption sft sl-title" data-x="center" data-y="center" data-voffset="-90" data-speed="700" data-start="1700" data-easing="easeOutBack">splashes</div>
             <p class="tp-caption sfb" data-x="center" data-y="center" data-voffset="40" data-speed="500" data-start="1900" data-easing="easeOutBack">crafted</p>
           </li>
