--- a/templates/snippet/cta.html
+++ b/templates/snippet/cta.html
@@ -46,7 +46,17 @@
       </div>
     </div>
     <div class="map">
-      <div id="map" class="google-map"></div>
+      <iframe 
+        src="https://www.google.com/maps?q=Sai+Baba+Market,+behind+Bank+of+Maharashtra,+Naidu+Colony,+Pant+Nagar,+Ghatkopar+East,+Mumbai,+Maharashtra+400075&output=embed" 
+        width="100%" 
+        height="400" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
     </div>
+    
+
     {% include 'snippet/sub.html' %}
   </section>
