--- a/templates/contact.html
+++ b/templates/contact.html
@@ -107,12 +107,22 @@
 	</div>
 	<!--/ page content -->
 	<!-- map -->
-	<div class="contact-map">
+	<section id="contact" class="contact padding-section">
 		<div class="map">
-			<div id="map" class="google-map"></div>
+		  <iframe 
+			src="https://www.google.com/maps?q=Sai+Baba+Market,+behind+Bank+of+Maharashtra,+Naidu+Colony,+Pant+Nagar,+Ghatkopar+East,+Mumbai,+Maharashtra+400075&output=embed" 
+			width="100%" 
+			height="400" 
+			style="border:0;" 
+			allowfullscreen="" 
+			loading="lazy" 
+			referrerpolicy="no-referrer-when-downgrade">
+		  </iframe>
 		</div>
+		
+	
 		{% include 'snippet/sub.html' %}
-	</div>
+	  </section>
 	<!--/ map -->
 	<!-- page footer -->
 	{% include 'snippet/footer2.html' %}
