--- a/templates/contact.html
+++ b/templates/contact.html
@@ -33,24 +33,24 @@
 							<div class="">
 								<i class="fa fa-phone"></i>
 								<div class="contact-content">
-									<strong>Customer Care:</strong>
+									<strong>Call Us:</strong>
 									<p><a href="tel:+919969647226" style="color: inherit; text-decoration: none;">+91 9969647226</a></p>
 								</div>
 							</div>
 							<div class="">
 								<i class="fa fa-envelope-o"></i>
 								<div class="contact-content">
-									<strong>General Email:</strong>
+									<strong>Email Us:</strong>
 									<p><a href="mailto:info@vinkdesigns.com" style="color: inherit; text-decoration: none;">info@vinkdesigns.com</a></p>
 								</div>
 							</div>
-							<div class="">
+							{% comment %} <div class="">
 								<i class="fa fa-power-off"></i>
 								<div class="contact-content">
 									<strong>Work Time:</strong>
 									<p>Mon. - Fri. 09:00 - 24:00</p>
 								</div>
-							</div>
+							</div> {% endcomment %}
 							<div class="last">
 								<i class="fa fa-share-alt"></i>
 								<div class="contact-content">
