--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -102,7 +102,7 @@
 				<div class="grid-col grid-col-6">
 					<div class="title">
 						<span class="main-title">WHY CHOOSE US?</span>
-						<span class="slash-icon">/<i class="fa fa-angle-double-right"></i></span>PREMIUM ONE PAGE THEMES
+						<span class="slash-icon">/<i class="fa fa-angle-double-right"></i></span>Excellence in Every Solution
 					</div>
 					<dl>
 						<dt>Why Choose Vink?</dt>
