--- a/templates/snippet/footer2.html
+++ b/templates/snippet/footer2.html
@@ -55,12 +55,12 @@
         <div class="footer-column">
             <h3>Quick Link</h3>
             <ul>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">FAQs</a></li>
-                <li><a href="#">Company</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">News & Blog</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="{% url "home:portfolio" %}">Portfolio</a></li>
+                {% comment %} <li><a href="#">FAQs</a></li> {% endcomment %}
+                {% comment %} <li><a href="#">Company</a></li> {% endcomment %}
+                <li><a href="{% url "home:about" %}">About us</a></li>
+                <li><a href="{% url "blog:blog" %}">Blog</a></li>
+                <li><a href="{% url "home:contact" %}">Contact Us</a></li>
             </ul>
         </div>
         
